<resources>
    <string name="app_name">Sniffle Videocall</string>
    <string name="bienvenido">¡Bienvenido a Sniffle Video Call!</string>
    <string name="mensaje_home">Conéctate fácilmente con tus amigos y familiares</string>
    <string name="crear_reunion">Crear Reunión</string>
    <string name="unirse_reunion">Unirse a Reunión</string>
    <string name="powered_by">Powered by Sebas Lon</string>
    <string name="hang_up">Colgar</string>
    <string name="toggle_camera">Apagar/Encender Cámara</string>
    <string name="toggle_mic">Apagar/Encender Micrófono</string>
    <string name="mute">Mute</string>
    <string name="end_call">End Call</string>
    <string name="switch_camera">Switch Camera</string>
</resources>